# enfig

./: .gitignore  README.md  pyproject.toml
.github/publish/: action.yml
.github/workflows/: CD.yml  CI.yml
enfig/: __init__.py  errors.py
tests/: conftest.py
