[project]
name = "enfig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
GitHub = "https://github.com/DAtek/enfig"
license = "MIT"

dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4"
]

# See https://docs.astral.sh/uv/reference/settings/
[tool.uv]
link-mode = "hardlink"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "I", # isort
]

[tool.pytest.ini_options]
addopts = "--cov enfig"
